@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-31T08:18:15Z",
-  "count_outdated" : 305,
-  "uniques_outdated" : 158,
-  "count" : 331,
-  "uniques" : 177,
+  "timestamp" : "2022-06-01T01:09:04Z",
+  "count_outdated" : 308,
+  "uniques_outdated" : 160,
+  "count" : 336,
+  "uniques" : 180,
   "clones" : [
-    {
-      "timestamp": "2022-05-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-05-18T00:00:00Z",
       "count": 2,
@@ -56,10 +49,10 @@
     },
     {
       "timestamp": "2022-05-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 1, 3 ]
     }
   ]
 }
