@@ -1,12 +1,7 @@
 {
-  "count": 26,
-  "uniques": 12,
+  "count": 28,
+  "uniques": 13,
   "clones": [
-    {
-      "timestamp": "2022-05-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-18T00:00:00Z",
       "count": 2,
@@ -39,8 +34,8 @@
     },
     {
       "timestamp": "2022-05-31T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
