@@ -1,3 +1,10 @@
+2022-06-01T01:09:04Z:
+* notice: last 14d: unq all: 13 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 158 305 / 177 331
+* notice: next accum: outdated-unq outdated-all / unq all: 160 308 / 180 336
+* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +3 +4 -0 -0 / 3 4
+* notice: removed / changed dates: [2022-05-17] / [2022-05-31]
+
 2022-05-31T08:18:15Z:
 * notice: last 14d: unq all: 12 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 158 305 / 176 331
